--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <img class="book__img" src="./assets/crack the coding interview.png" alt="">
                             </figure>
                             <div class="book__title">
-                                Book title 
+                                Crack the Coding Interview 
                             </div>
                             <div class="book__ratings">
                                  <i class="fas fa-star"></i>
@@ -113,10 +113,10 @@
                         </div>
                         <div class="book">
                             <figure class="book__img--wrapper">
-                                <img class="book__img" src="./assets/crack the coding interview.png" alt="">
+                                <img class="book__img" src="./assets/atomic habits.jpg" alt="">
                             </figure>
                             <div class="book__title">
-                                Book title 
+                                Atomic Habits 
                             </div>
                             <div class="book__ratings">
                                  <i class="fas fa-star"></i>
@@ -126,15 +126,15 @@
                                  <i class="fas fa-star-half-alt"></i>
                             </div>
                             <div class="book__price">
-                                <span class="book__price--normal">$54.66</span>$14.95
+                                <span class="book__price--normal">$96.66</span>$25.95
                             </div>
                         </div>
                         <div class="book">
                             <figure class="book__img--wrapper">
-                                <img class="book__img" src="./assets/crack the coding interview.png" alt="">
+                                <img class="book__img" src="./assets/david goggins.jpeg" alt="">
                             </figure>
                             <div class="book__title">
-                                Book title 
+                                Cant Hurt 
                             </div>
                             <div class="book__ratings">
                                  <i class="fas fa-star"></i>
