--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <img class="book__img" src="./assets/david goggins.jpeg" alt="">
                             </figure>
                             <div class="book__title">
-                                Cant Hurt 
+                                Can't Hurt 
                             </div>
                             <div class="book__ratings">
                                  <i class="fas fa-star"></i>
@@ -144,15 +144,15 @@
                                  <i class="fas fa-star-half-alt"></i>
                             </div>
                             <div class="book__price">
-                                <span class="book__price--normal">$54.66</span>$14.95
+                                <span class="book__price--normal">$30.99</span>$12.99
                             </div>
                         </div>
                         <div class="book">
                             <figure class="book__img--wrapper">
-                                <img class="book__img" src="./assets/crack the coding interview.png" alt="">
+                                <img class="book__img" src="./assets/deep work.jpeg" alt="">
                             </figure>
                             <div class="book__title">
-                                Book title 
+                                Deep Work  
                             </div>
                             <div class="book__ratings">
                                  <i class="fas fa-star"></i>
@@ -162,7 +162,7 @@
                                  <i class="fas fa-star-half-alt"></i>
                             </div>
                             <div class="book__price">
-                                <span class="book__price--normal">$54.66</span>$14.95
+                                <span class="book__price--normal">$27.66</span>$14.95
                             </div>
                         </div>
                     </div>
