added latest book section and added first book

--- a/index.html
+++ b/index.html
@@ -173,6 +173,29 @@
         <section id="recent">
             <div class="container">
                 <div class="row">
+                    <h2 class="section__title">
+                        Lateset <span class="red">Books</span> 
+                    </h2>
+                    <div class="books">
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img src="./assets/book-1.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                10X rule
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">$27.66</span>$14.65
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
