--- a/index.html
+++ b/index.html
@@ -195,6 +195,132 @@
                                 <span class="book__price--normal">$27.66</span>$14.65
                             </div>
                         </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img src="./assets/book-2.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                Be Obsessed or Be Normal 
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">$27.66</span>$14.65
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img src="./assets/book-3.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                Rich Dad Poor Dad
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">$27.66</span>$14.65
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img src="./assets/book-4.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                Cashflow Quadrant
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">$27.66</span>$14.65
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img src="./assets/book-5.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                48 Laws of Power
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">$27.66</span>$14.65
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img src="./assets/book-6.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                The 5 Second Rule
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">$27.66</span>$14.65
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img src="./assets/book-7.jpg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                Your Next Five Money Moves
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">$27.66</span>$14.65
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img src="./assets/book-8.jpeg" alt="" class="book__img">
+                            </figure>
+                            <div class="book__title">
+                                Mastery
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star"></i>
+                                 <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">$27.66</span>$14.65
+                            </div>
+                        </div>
                     </div>
 
                 </div>
