--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="container">
           <div class="row">
             <h2 class="section__title">
-              Lateset <span class="red">Books</span>
+              Latest <span class="red">Books</span>
             </h2>
             <div class="books">
               <div class="book">
@@ -309,7 +309,10 @@
           <div class="container">
               <div class="row row__column">
                   <h2>Explore more <span class="red">Books</span></h2>
-                  <button class="btn explore__button">Browse Books</button>
+                  <a href="#features">
+                    <button class="btn explore__button">Browse Books</button>
+                  </a>
+                 
               </div>
           </div>
       </section>
