--- a/index.html
+++ b/index.html
@@ -23,25 +23,26 @@
             <li><a href="#" class="nav__link">Contact</a></li>
             <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
           </ul>
-        </div>
-        <button class="btn__menu">
+        
+        <button class="btn__menu" onclick="openMenu()">
             <i class="fas fa-bars"></i>
         </button>
         <div class="menu__backdrop">
-            <button class="btn__menu btn__menu--close">
+            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
                 <i class="fas fa-times"></i>
             </button>
             <ul class="menu__links">
                 <li class="menu__list">
-                    <a class="menu__link" href="#">Home</a>
+                    <a class="menu__link" onclick="closeMenu()" href="#">Home</a>
                 </li>
                 <li class="menu__list">
-                    <a class="menu__link" href="#features">Books</a>
+                    <a class="menu__link" onclick="closeMenu()" href="#features">Books</a>
                 </li>
                 <li class="menu__list">
-                    <a class="no-cursor menu__link" href="#">Contact</a>
+                    <a class="no-cursor menu__link" onclick="closeMenu()" href="#">Contact</a>
                 </li>
             </ul>
+        </div>
         </div>
       </nav>
       <header>
