--- a/books.html
+++ b/books.html
@@ -54,7 +54,7 @@
               All <span class="red">Books</span>
             </h2>
             <select id="filter" onchange="filterBooks(event)">
-              <option value="" disabled select>Sort</option>
+              <option value="" disabled selected>Sort</option>
               <option value="LOW_TO_HIGH">Price, Low to High</option>
               <option value="HIGH_TO_LOW">Price, High to Low</option>
               <option value="RATING">Rating</option>
