made the spinner red

--- a/books.html
+++ b/books.html
@@ -61,7 +61,7 @@
             </select>
           </div>
           <div class="books books__loading">
-
+             <i class="fas fa-spinner red"></i>
           </div>
         </div>
       </div>
