added style for when and when not to display loading screen

--- a/books.html
+++ b/books.html
@@ -61,7 +61,7 @@
             </select>
           </div>
           <div class="books books__loading">
-             <i class="fas fa-spinner red"></i>
+             <i class="fas fa-spinner  books__loading--spinner red"></i>
           </div>
         </div>
       </div>
